src/App.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Raleway&display=swap');
/* font-family: 'Open Sans Condensed', sans-serif;
font-family: 'Raleway', sans-serif; */


:root {
  --white: #ffffff;
  --light-grey: #f4f4f4;
  --dark-grey: #666666;
  --dark: rgb(52, 58, 64);
  --light-steel: #B3C7CE;
  --steel: #607A87;
  --sage: #8FA35D;
  --terracotta: #CC5329;
  --cornflower: #F6BC60;
  --neutral: #F6F6F6;
  /* --neutral: #F2F8FB; */
}

body {
  font-family: 'Open Sans Condensed', sans-serif !important;
  color: var(--dark-grey);
  font-size: 1.1rem !important;
  letter-spacing: 1px;
}

/* ******************** NAVBAR ************************ */

.navbar {
  position: fixed;
  height: 7vh;
  visibility: hidden;
  z-index: 2;
}

.navbar.active {
  visibility: visible;
}

nav {
  background-color: var(--light-steel);
}

/* **************** Menu Links *********************** */

nav a.nav-link {
  font-size: 1.1rem;
  font-weight: 300;
  letter-spacing: 0.0375px;
  cursor: pointer;
}

nav ul li {
  text-transform: uppercase;
}

.navbar-nav > li > a {
  margin-right: 0.75rem;
  margin-left: 0.75rem;
  color: var(--white) !important;
}

/* @media(max-width: 768px) {
  .navbar-brand {
    width: 7rem;
  }
} */

.navbar-nav > li > a.active, .navbar-nav > li > a:focus {
  text-decoration: overline underline;
  text-underline-position: under;
}

.navbar-nav > li > a:hover {
  text-decoration: overline underline;
  text-underline-position: under;
}

.navbar-collapse {
  background-color: var(--light-steel)
}

/* ******************** HEADER ************************ */

.header-wrapper {
  position: relative;
  background: url(./images/background4.jpg) no-repeat;
  background-size: cover;
  background-position: center;
  height: 100vh;
  color: var(--steel);
}

.main-info {
  display: flex;
  position: absolute;
  top: 30vh;
  left: 0;
  right: 0;
  bottom: 575px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  z-index: 1;
}

.main-info h1 {
  text-transform: uppercase;
  font-size: 4rem !important;
  letter-spacing: 3px;
}

/* .main-info h2 {
  text-transform: uppercase;
  font-size: 1.75rem !important;
} */

.headerMenu ul{
  padding: 0;
}

.headerMenu ul li{
  display: inline-block;
  text-decoration: none;
  text-transform: uppercase;
  padding-top: 3vh;
}

.headerMenu ul li a{
  color: var(--steel);
  font-weight: bolder;
}

.headerMenu > ul > li a:hover{
  text-decoration: overline underline !important;
  text-underline-position: under !important;
}

/* ********************** MEDIA ********************** */
@media(max-height: 400px) {
  .main-info {
    top: 70vh;
  }
  .header-wrapper {
    background-image: none;
    background-color: var(--neutral);
  }

 }

@media(min-height: 401px) and (max-height: 1000px) {
 .main-info {
   top: 37vh;
 }

}
/* **************** TYPED TEXT *************** */

.typed-text {
  font-size: 2rem;
  margin-top: .25rem;
  color: var(--steel);
}

@media(max-width: 768px) {
  .main-info h1 {
    font-size: 1.7rem !important;
  }

  .typed-text {
    font-size: 1.3rem !important;
  }
}

/* **************** PARTICLES *************** */

.tsparticles-canvas-el {
  position: absolute;
  height: 100vh;
  width: 100vw;
  z-index: 1;
}

@media(max-width: 768px) {
  .particles-canvas {
    display: none;
  }

}

/* **************** ABOUT *************** */

.aboutMe {
 height: 40vh;
 margin-top: 3vh;
 overflow: hidden;
 height: auto;
}


.photo-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 1vh;
  padding-top: 5vh;
}

.profile-img {
  width: 18rem;
  height: 18rem;
  border-radius: 50%;
  padding: .3rem;
  border: 4px double var(--steel);
  transition: transform .8s ease-in-out;
  display: inline;
}

.profile-img:hover {
  transform: rotate(720deg);
}

.koalaRow {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto !important;
  width: 50%;
  font-size: .95rem;
  color: grey;
  letter-spacing: 2px;
}

.about-heading {
  color: var(--steel);
  text-transform: uppercase;
}


@media(max-width: 468px) {
  .profile-img {
    width: 10rem;
  }
}

/* **************** SKILLS *********************** */

.skills {
  text-align: center;
  padding-top: 2rem;
  top: 0;
  overflow: hidden;
  position: static;
  z-index: -100;
  background: var(--neutral);
}

.skills h2 {
  color: var(--steel);
  text-transform: uppercase;
}

.skillsTagline {
  letter-spacing: 2px;
}


.skills .circle {
  position: relative;
  margin: 0.375rem auto;
  border-radius: 50%;
  width: 3.12rem;
  height: 3.12rem;
}

.steelCircle {
  background: var(--steel);
}

.sageCircle {
  background: var(--sage);
}

.terracottaCircle {
  background: var(--terracotta);
}

.cornflowerCircle {
  background: var(--cornflower);
}

.skills .icon {
  font-size: 2.25rem;
  color: var(--white);
  position: absolute;
  z-index: 1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.skillsLogo {
  height: 30px;
}


/* HOVER EFFECTS */

/* steel circles */
.skills .steelCircle::after, .skills .steelCircle::before {
  border: 5px double var(--steel);
  border-radius: 50%;
  content: "";
  position: absolute;
  width: 3.12rem;
  height: 3.12rem;
  left: 0;
  bottom: 0;
  transition: transform 0.3s ease;
}

.skills .steelCircle:hover::after {
  transform: translate(-7px, -7px);
}

.skills .steelCircle:hover::before {
  transform: translate(-14px, -14px);
}

/* sage circles */
.skills .sageCircle::after, .skills .sageCircle::before {
  border: 3px solid var(--sage);
  border-radius: 50%;
  content: "";
  position: absolute;
  width: 3.12rem;
  height: 3.12rem;
  left: 0;
  bottom: 0;
  transition: transform 0.3s ease, height 0.3s ease;
}

.skills .sageCircle:hover::after {
  transform: translate(.75rem, 0);
  height: 20%;
}

.skills .sageCircle:hover::before {
  transform: translate(-.75rem, 0);
  height: 20%;
}
/* ... */

